--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,291 @@
+@import "~antd/dist/antd.css";
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.App {
+    height: 100vh;
+    width: auto;
+    display: flex;
+    flex-direction: row;
+}
+
+.App-left {
+    margin-top: 60px;
+    margin-left: 150px;
+    width: 70vw;
+    /* text-align: center; */
+}
+
+.App-right {
+    border: 1px solid black;
+    width: 30vw;
+    height: auto;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: flex-start; */
+}
+
+.sider {
+    width: 70%;
+    height: 100vh;
+    background-color: chocolate;
+}
+
+.content {
+    background-color: white;
+    height: auto;
+}
+
+.header {
+    width: auto;
+    height: auto;
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.flat-icons {
+    height: 10vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    /* padding: 10px 10px 10px 10px; */
+    margin: 5px;
+}
+
+.avatar {
+    margin: 10px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+}
+
+.title {
+    margin-bottom: 20px;
+    /* height: 10vh; */
+}
+
+.avatar:nth-child(odd) {
+    background-color: lightgray;
+}
+
+
+/* box css */
+
+.box {
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.container {
+    border: 1px solid black;
+    width: auto;
+    height: 12vh;
+    /* padding: 5px; */
+    margin: 10px 10px 10px 10px;
+    /* margin-right: 5px; */
+    /* background-color: lightgreen; */
+    /* margin: 10px; */
+}
+
+.container-1 {
+    border: 1px solid black;
+    width: auto;
+    height: 9vh;
+    margin: 10px;
+    /* padding-top: 5px;
+    padding-bottom: 5px; */
+    /* margin: 5px; */
+    /* margin: 10px 10px 10px 10px; */
+    /* margin-left: 10px;
+  margin-right: 10px; */
+    background-color: lightgray;
+}
+
+.container-2 {
+    border: 2px dotted blue;
+    width: auto;
+    height: 6vh;
+    margin: 10px;
+    /* padding: 10px; */
+    /* margin: 10px 10px 10px 10px; */
+    background-color: gray;
+}
+
+.container:hover {
+    background-color: blue;
+    /* color: red; */
+}
+
+.container-a {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    border: 1px solid black;
+    width: auto;
+    height: 12vh;
+    /* padding: 5px; */
+    margin: 10px;
+    /* margin-right: 5px; */
+    /* background-color: lightgreen; */
+    /* margin: 10px; */
+}
+
+.container-a:hover {
+    background-color: blue;
+}
+
+.container-a-1 {
+    border: 1px solid black;
+    width: 10vw;
+    height: 9vh;
+    flex-grow: 1;
+    /* padding: 5px; */
+    margin: 10px;
+    /* margin: 10px 10px 10px 10px; */
+    /* margin-left: 10px;
+margin-right: 10px; */
+    background-color: lightgray;
+}
+
+.container-a-2 {
+    border: 1px solid black;
+    width: 10vw;
+    height: 9vh;
+    /* padding: 10px; */
+    margin: 10px;
+    flex-grow: 1;
+    /* margin: 10px 10px 10px 10px; */
+    /* margin-left: 10px;
+margin-right: 10px; */
+    background-color: lightgray;
+}
+
+.container-b {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border: 1px solid black;
+    width: auto;
+    height: 12vh;
+    /* padding: 20px; */
+    margin: 10px;
+    /* margin-right: 5px; */
+    /* background-color: lightgreen; */
+    /* margin: 10px; */
+}
+
+.container-b:hover {
+    background-color: blue;
+}
+
+.container-b-1 {
+    border: 1px solid black;
+    width: 7vw;
+    height: 9vh;
+    /* padding: 10px; */
+    margin: 10px;
+    flex-grow: 1;
+    /* margin: 10px 10px 10px 10px; */
+    /* margin-left: 10px;
+margin-right: 10px; */
+    background-color: lightgray;
+}
+
+.container-b-2 {
+    border: 1px solid black;
+    width: 14vw;
+    height: 9vh;
+    /* padding: 10px; */
+    margin: 10px;
+    flex-grow: 3;
+    /* margin: 10px 10px 10px 10px; */
+    /* margin-left: 10px;
+margin-right: 10px; */
+    background-color: lightgray;
+}
+
+.container-c {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border: 1px solid black;
+    width: auto;
+    height: 12vh;
+    /* padding: 20px; */
+    margin: 10px;
+    /* margin-right: 5px; */
+    /* background-color: lightgreen; */
+    /* margin: 10px; */
+}
+
+.container-c:hover {
+    background-color: blue;
+}
+
+.container-c-1 {
+    border: 1px solid black;
+    width: 14vw;
+    height: 9vh;
+    /* padding: 10px; */
+    margin: 10px;
+    flex-grow: 3;
+    /* margin: 10px 10px 10px 10px; */
+    /* margin-left: 10px;
+margin-right: 10px; */
+    background-color: lightgray;
+}
+
+.container-c-2 {
+    border: 1px solid black;
+    width: 7vw;
+    height: 9vh;
+    /* padding: 10px; */
+    margin: 10px;
+    flex-grow: 1;
+    /* margin: 10px 10px 10px 10px; */
+    /* margin-left: 10px;
+margin-right: 10px; */
+    background-color: lightgray;
 }
