--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@ Container */
 
 .box {
     width: auto;
-    height: auto;
+    height: 88vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -81,11 +81,33 @@ Container */
     border: 1px solid black;
     width: auto;
     height: 12vh;
-    padding: 20px;
+    /* padding: 20px; */
     margin: 10px;
     /* margin-right: 5px; */
     /* background-color: lightgreen; */
     /* margin: 10px; */
+}
+
+.container-1 {
+    border: 1px solid black;
+    width: auto;
+    height: 9vh;
+    /* padding: 10px; */
+    margin: 10px;
+    /* margin: 10px 10px 10px 10px; */
+    /* margin-left: 10px;
+    margin-right: 10px; */
+    background-color: lightgray;
+}
+
+.container-2 {
+    border: 2px dotted black;
+    width: auto;
+    height: 6vh;
+    margin: 10px;
+    /* padding: 10px; */
+    /* margin: 10px 10px 10px 10px; */
+    background-color: gray;
 }
 
 .container:hover {
@@ -100,7 +122,7 @@ Container */
     border: 1px solid black;
     width: auto;
     height: 12vh;
-    padding: 20px;
+    /* padding: 20px; */
     margin: 10px;
     /* margin-right: 5px; */
     /* background-color: lightgreen; */
@@ -115,8 +137,9 @@ Container */
     border: 1px solid black;
     width: 10vw;
     height: 9vh;
-    padding: 10px;
-    /* margin: 5px; */
+    /* padding: 10px; */
+    margin: 10px;
+    flex-grow: 1;
     /* margin: 10px 10px 10px 10px; */
     /* margin-left: 10px;
   margin-right: 10px; */
@@ -127,8 +150,9 @@ Container */
     border: 1px solid black;
     width: 10vw;
     height: 9vh;
-    padding: 10px;
-    /* margin: 5px; */
+    /* padding: 10px; */
+    margin: 10px;
+    flex-grow: 1;
     /* margin: 10px 10px 10px 10px; */
     /* margin-left: 10px;
 margin-right: 10px; */
@@ -142,7 +166,7 @@ margin-right: 10px; */
     border: 1px solid black;
     width: auto;
     height: 12vh;
-    padding: 20px;
+    /* padding: 20px; */
     margin: 10px;
     /* margin-right: 5px; */
     /* background-color: lightgreen; */
@@ -157,8 +181,9 @@ margin-right: 10px; */
     border: 1px solid black;
     width: 7vw;
     height: 9vh;
-    padding: 10px;
-    /* margin: 5px; */
+    /* padding: 10px; */
+    margin: 10px;
+    flex-grow: 1;
     /* margin: 10px 10px 10px 10px; */
     /* margin-left: 10px;
 margin-right: 10px; */
@@ -169,8 +194,9 @@ margin-right: 10px; */
     border: 1px solid black;
     width: 14vw;
     height: 9vh;
-    padding: 10px;
-    /* margin: 5px; */
+    /* padding: 10px; */
+    margin: 10px;
+    flex-grow: 3;
     /* margin: 10px 10px 10px 10px; */
     /* margin-left: 10px;
 margin-right: 10px; */
@@ -184,7 +210,7 @@ margin-right: 10px; */
     border: 1px solid black;
     width: auto;
     height: 12vh;
-    padding: 20px;
+    /* padding: 20px; */
     margin: 10px;
     /* margin-right: 5px; */
     /* background-color: lightgreen; */
@@ -199,8 +225,9 @@ margin-right: 10px; */
     border: 1px solid black;
     width: 14vw;
     height: 9vh;
-    padding: 10px;
-    /* margin: 5px; */
+    /* padding: 10px; */
+    flex-grow: 3;
+    margin: 10px;
     /* margin: 10px 10px 10px 10px; */
     /* margin-left: 10px;
 margin-right: 10px; */
@@ -211,32 +238,11 @@ margin-right: 10px; */
     border: 1px solid black;
     width: 7vw;
     height: 9vh;
-    padding: 10px;
-    /* margin: 5px; */
+    /* padding: 10px; */
+    margin: 10px;
+    flex-grow: 1;
     /* margin: 10px 10px 10px 10px; */
     /* margin-left: 10px;
 margin-right: 10px; */
     background-color: lightgray;
-}
-
-.container-1 {
-    border: 1px solid black;
-    width: auto;
-    height: 9vh;
-    padding: 10px;
-    /* margin: 5px; */
-    /* margin: 10px 10px 10px 10px; */
-    /* margin-left: 10px;
-    margin-right: 10px; */
-    background-color: lightgray;
-}
-
-.container-2 {
-    border: 1px dotted black;
-    width: auto;
-    height: 6vh;
-    margin: 10px;
-    /* padding: 10px; */
-    /* margin: 10px 10px 10px 10px; */
-    background-color: gray;
 }
